@@ -17,6 +17,9 @@
   directory is not owned by the current use, commonly caused by using ``sudo``
   without the ``-H`` flag.
 
+* Update PEP 440 support to handle the latest changes to PEP 440, particularly
+  the changes to ``>V`` and ``<V`` so that they no longer imply ``!=V.*``.
+
 
 **6.0.3 (2014-12-23)**
 
